# flextable

./: .gitignore  README.rst  pyproject.toml
flextable/: __init__.py  base.py
tests/: conftest.py  test_base.py
